# whoeverwants

./: .dockerignore  .gitignore  BORDA_COUNT_PLAN.md  CLAUDE-DEBUGGING-GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FORK_IMPLEMENTATION_PLAN.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION_PLAN.md  NOMINATION-VOTING-FIX-ANALYSIS.md  README.md  apply-fix.js  apply-function-update.js  apply-single-migration-prod.cjs  apply_fix_migration.js  apply_single_migration.js  capacitor.config.ts  check-columns.js  check-poll-8.cjs  check-rounds.cjs  check-tie-breaking-demo.cjs  check-tie-demo.js  check-working-poll.cjs  complete-e2e-test.cjs  contaminated-poll-page.html  create-4-round-demo.js  create-borda-explanation-demo.js  create-closed-demo.js  create-demo-poll.js  create-final-borda-demo.cjs  create-final-test-poll.js  create-html-report.cjs  create-perfect-borda-demo.cjs  create-perfect-tie-demo.js  create-production-tie-demo.cjs  create-proper-tie-test.js  (+117 more)
server/: Dockerfile  database.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt
server/algorithms/: auto_close.py  limited_supply.py  multipoll_title.py  nomination.py  participation.py  poll_title.py  ranked_choice.py  related_polls.py  showtime.py  suggestion.py  time_poll.py  time_question.py  time_slots.py  vote_validation.py  weights.py  yes_no.py
server/data/: alamo_cinemas.json
server/routers/: auth.py  client_logs.py  groups.py  internal.py  multipolls.py  notifications.py  polls.py  questions.py  search.py  showtimes.py  slots.py  threads.py  users.py
server/services/: __init__.py  auth.py  category_options.py  comments.py  contacts.py  email.py  events.py  fe_origin.py  follow_state.py  (+20 more)
social_tests/: conftest.py  generate_report.py  pyproject.toml  testing_strategy.md
(+1079 files in other folders)
