[project]
name = "whoeverwants-server"
version = "0.1.0"
description = "WhoeverWants API server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
